# Configuration

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: AssertOutOfSourceBuilds.cmake  SetGlobalVariable.cmake
Documentation/Doxygen/: Doxyfile.in  doxygen-awesome-sidebar-only.css  doxygen-awesome.css  doxygen-awesome.js
Include/Z4GE/: Configuration.hh
Include/Z4GE/Configuration/: CompilerTraits.hh  Macros.hh  Platform.hh
Testing/: Macros.cc  Platform.cc
